feat(website): update

--- a/docs/_includes/join-form.haml
+++ b/docs/_includes/join-form.haml
@@ -1,5 +1,5 @@
 %form.join-form{action: '#', method: 'POST'}
-  %h3 Get Started. It’s FREE!
+  %h3 Get Started. It’s Forever FREE!
   .spacer20
   .input-group
     %span.input-group-addon
@@ -19,4 +19,4 @@
   .spacer20
   .text-center
     %button.btn.btn-primary.btn-lg{type: 'submit'}
-      JOIN THE BETA!
+      JOIN THE PROGRAM!
