--- a/docs/index.haml
+++ b/docs/index.haml
@@ -70,6 +70,46 @@ layout: default
           .spacer5
           React
       .col-sm-4.showcase
+        %a{:href => "http://vuejs.org/guide/", :target => "_blank"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-vuejs.png"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-vuejs.gif"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+          .spacer5
+          Vue.js
+      .col-sm-4.showcase
+        %a{:href => "http://facebook.github.io/react-native/docs/getting-started.html", :target => "_blank"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-react.png"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-reactnative.gif"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+          .spacer5
+          React Native
+      .col-sm-4.showcase
+        %a{:href => "https://docs.influxdata.com/", :target => "_blank"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-influxdata.png"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-influxdata.gif"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+          .spacer5
+          Influxdata
+      .col-sm-4.showcase
+        %a{:href => "http://help.apiary.io/", :target => "_blank"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-apiary.png"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-apiary.gif"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+          .spacer5
+          Apiary
+      .col-sm-4.showcase
+        %a{:href => "http://marionettejs.com/", :target => "_blank"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-marionettejs.png"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-marionettejs.gif"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+          .spacer5
+          Marionette.js
+      .col-sm-4.showcase
         .placeholder-logo
         .placeholder-screen
         .spacer5
@@ -110,7 +150,7 @@ layout: default
     %h2.page-section-title Get started
     .text-center
       %p We’ll get back to you within a few hours with everything you need to integrate your new search into your website.
-      %p Oh, and did we mention it's FREE? No commitment. No subscription. Everything is on us!
+      %p Oh, and did we mention it's FREE? No commitment. No subscription. Everything is on us! And it won't change.
     .spacer30
 
   {% haml join-form.haml %}
