--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -225,7 +225,7 @@ html, body {
     border: #666 2px dashed;
     margin-top: 16px;
     width: 100%;
-    height: 200px;
+    padding-bottom: 56%;
     border-radius: 4px;
   }
 }
