feat(website): community header

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,10 +3,13 @@
   <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a id="logo" href="{{ site.baseurl }}/">
+        <a id="logo-community" href="https://community.algolia.com/">
+          <img src="{{site.baseurl}}/img/logo-community-sm.svg" alt="Algolia Community" />
+          Community
+        </a>
+        <a id="logo-algolia" href="{{ site.baseurl }}/">
           <img src="{{site.baseurl}}/img/algolia-logo.svg" alt="Algolia" />
         </a>
-        presents
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
