feat(website): updated logo

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,12 +3,15 @@
   <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a id="logo-community" href="https://community.algolia.com/">
+        <a class="logo-community" href="https://community.algolia.com/">
           <img src="{{site.baseurl}}/img/logo-community-sm.svg" alt="Algolia Community" />
           Community
         </a>
-        <a id="logo-algolia" href="{{ site.baseurl }}/">
+        <a class="logo-algolia" href="https://www.algolia.com">
           <img src="{{site.baseurl}}/img/algolia-logo.svg" alt="Algolia" />
+        </a>
+        <a class="project-title" href="{{ site.baseurl }}/">
+          DocSearch
         </a>
       </div>
       <div class="navbar-collapse collapse">
