--- a/docs/_includes/searchbar.html
+++ b/docs/_includes/searchbar.html
@@ -9,7 +9,7 @@
 </svg>
 
 <form role="search" novalidate="novalidate" class="searchbox sbx-custom">
-    <input onkeyup="updateReset()" type="search" name="search" placeholder="Search in the documentation" autocomplete="off" required="required" class="sbx-custom__input">
+    <input onkeyup="updateReset()" type="search" name="search" placeholder="Search in the doc ..." autocomplete="off" required="required" class="sbx-custom__input">
     <button type="submit" class="sbx-custom__submit">
         <svg role="img" aria-label="Search">
             <title>Icon Search</title>
