New Logo :raised_hands:

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -6,7 +6,7 @@ layout: default
   .container.pos-rel
     .jumbotron-header
       %h1.jumbotron-title
-        %img.logo{:src => "./img/logo-docsearch.svg"}
+        %img.logo{:src => "./img/docsearch-logo.svg"}
       %p#top The easiest way to add search to your documentation.
     .jumbotron-left-column
       %div.index-container
