--- a/docs/index.haml
+++ b/docs/index.haml
@@ -8,6 +8,7 @@ layout: default
       %h1.jumbotron-title
         %img.logo{:src => "./img/docsearch-logo.svg"}
       %p#top The easiest way to add search to your documentation.
+      .spacer20
     .jumbotron-left-column
       %div.index-container
         %img.index{:src => "./img/illus-index.svg"}
