docs(website): fixed typo

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -136,7 +136,7 @@ layout: default
             %h3
               %span.how-it-works-number> 3
               You add the search autocomplete to your UI
-            %p We’ll send you a few lines to code to integrate Algolia autocomplete and power your search.
+            %p We’ll send you a few lines of code to integrate Algolia autocomplete and power your search.
             %p You will receive the same speed, relevance and best-in-class UX as our paying customers.
 #section_get-started.page-section.dark
   .container
