docs(website): update top navbar

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -4,11 +4,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="logo-community" href="https://community.algolia.com/">
-          <img src="{{site.baseurl}}/img/logo-community-sm.svg" alt="Algolia Community" />
-          Community
-        </a>
-        <a class="logo-algolia" href="https://www.algolia.com">
-          <img src="{{site.baseurl}}/img/algolia-logo.svg" alt="Algolia" />
+          <img src="{{site.baseurl}}/img/logo-community-inline-dark.svg" width="150px" alt="Algolia Community" />
         </a>
         <a class="project-title" href="{{ site.baseurl }}/">
           DocSearch
