--- a/docs/css/_page.scss
+++ b/docs/css/_page.scss
@@ -3,6 +3,11 @@
   line-height: 1.5em;
 }
 
+.page-content {
+  font-size: .9em;
+  font-family: "Open Sans", helvetica, arial, sans-serif;
+}
+
 pre {
   font-size: .8em;
 }
