--- a/docs/css/_home.scss
+++ b/docs/css/_home.scss
@@ -18,31 +18,20 @@ html, body {
 
 /* HEADER
 // ------------------------- */
-.logo-algolia {
-  position: absolute;
-  left: 72px;
-  top: 5px;
-  display: block;
-  line-height: 1;
-  img {
-    height: 18px;
-    position: relative;
-    margin-right: 12px;
-  }
-}
 
 .logo-community {
   color: white;
-  font-size: 1.8em;
+  font-size: 26px;
   font-weight: 100 !important;
-  margin-right: 8px;
-  position: relative;
-  top: 6px;
+  margin-right: 12px;
+  border-right: #FF2E6C 2px solid;
+  padding-left: 8px;
+
   img {
     position: relative;
-    top: -8px;
-    height: 46px;
-    width: 46px;
+    top: -3px;
+    width: 200px;
+    margin-right: 6px;
   }
   &:hover, &:active, &:focus {
     color: white;
@@ -78,7 +67,10 @@ html, body {
       }
     }
     .navbar-nav > li {
-      padding: 14px 8px;
+      padding: 14px;
+      &:last-child {
+        padding-right: 20px;
+      }
     }
     .navbar-nav > li > a {
       padding: 0 0 4px 0;
