--- a/docs/css/_searchbar.scss
+++ b/docs/css/_searchbar.scss
@@ -14,7 +14,7 @@ $custom:(
   icon-color: #1D96C7,
   icon-background: #FFFFFF,
   icon-background-opacity: 0,
-  icon-clear-size: 12px
+  icon-clear-size: 12px,
 );
 
 @mixin searchbox(
@@ -28,39 +28,44 @@ $custom:(
   $input-focus-background: $input-background,
   $font-size: 14px,
   $placeholder-color: #aaa,
-  $icon: 'sbx-icon-search-1',
   $icon-size: 18px,
   $icon-position: right,
   $icon-color: #fff,
   $icon-background: #3e82f7,
   $icon-background-opacity: 1,
-  $icon-clear: 'sbx-icon-clear-1',
-  $icon-clear-size: 12px
+  $icon-clear-size: 12px,
+  $font-family: "Open Sans"
 ) {
   display: inline-block;
   position: relative;
-  width: $input-width;
   height: $input-height;
   white-space: nowrap;
   box-sizing: border-box;
 
   &__input {
     display: inline-block;
-    transition: box-shadow .4s ease, background .4s ease, padding .4s ease;
+    transition: box-shadow .4s ease, background .4s ease;
     border: 0;
     border-radius: $border-radius;
     box-shadow: inset 0 0 0 $border-width $input-border-color;
     background: $input-background;
     padding: 0;
-    padding-right: if($icon-position == 'right', $input-height, 0) + $icon-clear-size * 2 + 8px;
-    padding-left: if($icon-position == 'right', $font-size, $input-height + if($icon-background-opacity == 0, 0, 8px));
-    width: 100%;
     height: 100%;
+    width: 38px;
     vertical-align: middle;
     white-space: normal;
     font-size: $font-size;
     appearance: none;
-    color: white;
+    font-family: $font-family;
+    opacity: .5;
+    color: transparent;
+
+    &::-webkit-input-placeholder{
+      color: transparent;
+    }
+    &::placeholder{
+      color: transparent;
+    }
 
     &::-webkit-search-decoration,
     &::-webkit-search-cancel-button,
@@ -74,21 +79,30 @@ $custom:(
     }
 
     &:focus,
-    &:active {
+    &:active,
+    &.filled {
       outline: 0;
+      padding-right: if($icon-position == 'right', $input-height, 0) + $icon-clear-size * 2 + 8px;
+      padding-left: if($icon-position == 'right', $font-size, $input-height + if($icon-background-opacity == 0, 0, 8px));
+      width: 100%;
       box-shadow: inset 0 0 0 $border-width $input-focus-border-color;
       background: $input-focus-background;
+      opacity: 1;
+      color: white;
+      &::-webkit-input-placeholder{
+        color: #777;
+      }
+      &::placeholder{
+        color: #777;
+      }
+      // color: white;
     }
-
-    &::placeholder {
-      color: $placeholder-color;
-    }
-
   }
 
   &__submit {
     position: absolute;
     top: 0;
+    pointer-events: none;
     #{$icon-position}: 0;
     margin: 0;
     border: 0;
