--- a/docs/index.haml
+++ b/docs/index.haml
@@ -6,12 +6,13 @@ layout: default
   .container.pos-rel
     .jumbotron-header
       %h1.jumbotron-title
-        %img.logo{:src => "./img/docsearch-logo.svg"}
+        Algolia doc search
+        %img.logo{:src => "./img/docsearch-logo.svg", :alt => "Algolia doc search", :height => "48"}
       %p#top The easiest way to add search to your documentation.
       .spacer20
     .jumbotron-left-column
       %div.index-container
-        %img.index{:src => "./img/illus-index.svg"}
+        %img.index{:src => "./img/illus-index.svg", :alt => "docsearch doc crawling"}
         %div.ripple
       .spacer30
       .text-center
@@ -32,74 +33,74 @@ layout: default
     .row
       .col-sm-4.showcase
         %a{:href => "https://facebook.github.io/react/", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-react.png"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-react.png", :alt => "reactjs"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-react.gif"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-react.gif", :alt => "react docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           React
       .col-sm-4.showcase
         %a{:href => "http://facebook.github.io/react-native/docs/getting-started.html", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-react.png"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-react.png", :alt => "react native"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-reactnative.gif"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-reactnative.gif", :alt => "react native docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           React Native
       .col-sm-4.showcase
         %a{:href => "http://eslint.org/", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-eslint.png"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-eslint.png", :alt => "eslint"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-eslint.gif"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-eslint.gif", :alt => "eslint docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           ESLint
       .col-sm-4.showcase
         %a{:href => "http://docs.scala-lang.org/", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-scala.png"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-scala.png", :alt => "scala"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-scala.gif"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-scala.gif", :alt => "scala docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           Scala
       .col-sm-4.showcase
         %a{:href => "https://babeljs.algolia.com/", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-babel.png"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-babel.png", :alt => "babel"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-babel.gif"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-babel.gif", :alt => "babel docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           Babel.js
       .col-sm-4.showcase
         %a{:href => "http://vuejs.org/guide/", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-vuejs.png"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-vuejs.png", :alt => "vuejs"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-vuejs.gif"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-vuejs.gif", :alt => "vuejs docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           Vue.js
       .col-sm-4.showcase
         %a{:href => "https://docs.influxdata.com/", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-influxdata.png"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-influxdata.png", :alt => "influxdata"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-influxdata.gif"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-influxdata.gif", :alt => "influxdata docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           Influxdata
       .col-sm-4.showcase
         %a{:href => "http://help.apiary.io/", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-apiary.png"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-apiary.png", :alt => "apiary"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-apiary.gif"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-apiary.gif", :alt => "apiary docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           Apiary
       .col-sm-4.showcase
         %a{:href => "http://marionettejs.com/", :target => "_blank"}
-          %img.img-responsive.logo{:src => "./img/showcase/logo-marionettejs.png"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-marionettejs.png", :alt => "marionnette"}
           .screen-wrapper
-            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-marionettejs.gif"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png"}
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-marionettejs.gif", :alt => "marionette docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           Marionette.js
       .col-sm-4.showcase
@@ -113,7 +114,7 @@ layout: default
       %h2.page-section-title How it works
     .row
       .col-sm-12
-        %img.img-responsive{:src => "./img/illus-howitworks.jpg"}
+        %img.img-responsive{:src => "./img/illus-howitworks.jpg", :alt => "how it works"}
     .spacer60
     .row
       .col-sm-10.col-sm-offset-1
