docs(website): round empty search

--- a/docs/css/_searchbar.scss
+++ b/docs/css/_searchbar.scss
@@ -51,7 +51,7 @@ $custom:(
     background: $input-background;
     padding: 0;
     height: 100%;
-    width: 38px;
+    width: $input-height;
     vertical-align: middle;
     white-space: normal;
     font-size: $font-size;
