docs(website): common header

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,10 +1,9 @@
-
 <header class="site-header">
   <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="logo-community" href="https://community.algolia.com/">
-          <img src="{{site.baseurl}}/img/logo-community-inline-dark.svg" width="150px" alt="Algolia Community" />
+          <img src="https://res.cloudinary.com/hilnmyskv/image/upload/logo-community-inline-dark.svg" width="150" alt="Algolia Community" />
         </a>
         <a class="project-title" href="{{ site.baseurl }}/">
           DocSearch
