feat(website): add echo

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -104,6 +104,14 @@ layout: default
           .spacer10
           Marionette.js
       .col-sm-4.showcase
+        %a{:href => "https://labstack.com/echo", :target => "_blank"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-echo.svg", :alt => "echo"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-echo.png", :alt => "echo docsearch demo"}
+            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
+          .spacer10
+          Echo
+      .col-sm-4.showcase
         .placeholder-logo
         .placeholder-screen
         .spacer10
