Add serge website

--- a/docs/index.haml
+++ b/docs/index.haml
@@ -108,9 +108,15 @@ layout: default
           %img.img-responsive.logo{:src => "./img/showcase/logo-echo.svg", :alt => "echo"}
           .screen-wrapper
             %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-echo.png", :alt => "echo docsearch demo"}
-            %img.img-responsive.screen-mask{:src => "./img/mask.png", :alt => "mask"}
           .spacer10
           Echo
+      .col-sm-4.showcase
+        %a{:href => "https://serge.io/docs/", :target => "_blank"}
+          %img.img-responsive.logo{:src => "./img/showcase/logo-serge.svg", :alt => "serge"}
+          .screen-wrapper
+            %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-serge.png", :alt => "serge docsearch demo"}
+          .spacer10
+          Serge
       .col-sm-4.showcase
         .placeholder-logo
         .placeholder-screen
