--- a/docs/index.haml
+++ b/docs/index.haml
@@ -111,7 +111,7 @@ layout: default
           .spacer10
           Echo
       .col-sm-4.showcase
-        %a{:href => "https://serge.io/docs/", :target => "_blank"}
+        %a{:href => "https://serge.io/", :target => "_blank"}
           %img.img-responsive.logo{:src => "./img/showcase/logo-serge.svg", :alt => "serge"}
           .screen-wrapper
             %img.img-responsive.example.freezeframe{:src => "./img/showcase/example-serge.png", :alt => "serge docsearch demo"}
